# oh-my-claude-code

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
docs/plans/: 2026-02-28-instinct-learning-plugin-refactor-design.md  2026-02-28-instinct-learning-plugin-refactor.md  2026-03-01-critical-fixes-only.md  2026-03-01-instinct-learning-enterprise-readiness-assessment.md
plugins/continuous-learning-v2/hooks/: observe.sh
plugins/instinct-learning/: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING_SUMMARY.md  TROUBLESHOOTING.md  config.schema.json  pylintrc  pyproject.toml  pytest.ini
plugins/instinct-learning/.claude-plugin/: plugin.json
plugins/instinct-learning/agents/: analyzer.md  evolver.md  observer.md
plugins/instinct-learning/commands/: analyze.md  evolve.md  export.md  import.md  session.md  status.md
plugins/instinct-learning/docs/: API.md  ARCHITECTURE.md  CLI_API.md  CONFIGURATION_EXAMPLES.md  DATA-FORMATS.md  EVALUATION.md  MIGRATION-GUIDE-2.0.1.md  SECURITY-ADVISORY-2026-03-01.md  TESTING_GUIDE.md
plugins/instinct-learning/docs/plans/: 2026-02-28-comprehensive-test-coverage-design.md  2026-02-28-comprehensive-test-coverage-implementation.md
plugins/instinct-learning/hooks/: hooks.json  observe.sh  post-tool.sh  pre-tool.sh  stop.sh
plugins/instinct-learning/lib/: clustering.py  confidence.py  instinct_parser.py  pattern_detection.py
plugins/instinct-learning/scripts/: cli_parser.py  init-env.sh  instinct-cli.py  instinct_cli.py  run-observer.py  start-observer.sh  stop-observer.sh  utils.sh
plugins/instinct-learning/scripts/commands/: __init__.py  cmd_decay.py  cmd_export.py  cmd_import.py  cmd_prune.py  cmd_status.py
plugins/instinct-learning/scripts/utils/: __init__.py  confidence.py  file_io.py  instinct_parser.py
plugins/instinct-learning/skills/: session-memory.md
plugins/instinct-learning/tests/: README.md  conftest.py  fixtures.py  run-all.sh  run_all.sh  test-clustering.py  test-confidence.py  test-hooks.sh  test-instinct-parser.py  test-integration.sh  test-observer.sh  test-pattern-detection.py  test-session-memory.sh  test_hooks.py  test_instinct_cli.py  test_integration.py  test_observe_sh.py
plugins/instinct-learning/tests/fixtures/: sample-observations.jsonl
plugins/instinct-learning/tests/integration/: __init__.py  test_analyzer_integration.py  test_archive_cleanup_race.py  test_cli_integration.py  test_cli_workflows.py  test_concurrent_operations.py  test_hooks_integration.py
plugins/instinct-learning/tests/scenarios/: __init__.py  test_data_integrity.py  test_edge_cases.py  test_error_handling.py  test_performance.py
plugins/instinct-learning/tests/unit/: __init__.py  test_agent_dispatch.py  test_cli_confidence.py  test_cli_errors.py  test_cli_export.py  test_cli_import.py  test_cli_import_export.py  test_cli_parser.py  test_cli_prune.py  test_cmd_export_decay_status_coverage.py  test_cmd_import_coverage.py  test_cmd_prune_coverage.py  test_confidence_decay.py  test_confidence_edge_cases.py  test_file_io.py  test_file_io_errors.py  test_hook_script_properties.py  test_instinct_cli_main.py  test_instinct_parser.py  test_instinct_parser_security.py  test_observe_sh.py  test_rotation.py
